<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarActivity">

    <ImageView
        android:id="@+id/iv_circle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="-80dp"
        android:src="@drawable/circle"
        android:tint="@color/orange2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <ImageView
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="-180dp"
        android:src="@drawable/circle"
        android:tint="@color/orange1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-27dp"
        android:layout_marginStart="-25dp"
        android:src="@drawable/morros_devops_transparente_1200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/circle"
        android:tint="@color/orange2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UseAppTint" />

    <ImageView
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginBottom="-240dp"
        android:src="@drawable/circle"
        android:tint="@color/orange1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="76dp"
        android:text="@string/title_recuperar"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/orange1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_circle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-80dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        app:cardElevation="8dp"
        app:cardCornerRadius="80dp"
        app:contentPaddingTop="16dp"
        app:contentPaddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_recuperar_username"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="110dp"
                android:src="@drawable/ic_email"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="48dp"
                android:hint="@string/hint_email"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/orange1"
                android:singleLine="true"
                android:textSize="12sp"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:background="@color/white"
                app:layout_constraintStart_toEndOf="@id/iv_recuperar_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_recuperar_username"
                app:layout_constraintBottom_toBottomOf="@id/iv_recuperar_username"/>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_recuperar_username"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="26dp"
                android:textColor="@color/blue1"
                android:text="@string/text_recuperar_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_recuperar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/blue3"
        app:cardElevation="24dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintStart_toEndOf="@id/cv_container"
        app:layout_constraintEnd_toEndOf="@id/cv_container"
        app:layout_constraintTop_toTopOf="@id/cv_container"
        app:layout_constraintBottom_toBottomOf="@id/cv_container">

        <ImageView
            android:id="@+id/btn_recuperar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/blue3"
            android:scaleType="fitXY"
            android:src="@drawable/ic_send_email" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_go_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-25dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        app:cardElevation="8dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_register">

        <Button
            android:id="@+id/btn_go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:onClick="goLogin"
            android:paddingStart="25dp"
            android:paddingEnd="50dp"
            android:text="@string/title_login"
            android:textAllCaps="false"
            android:textColor="@color/blue2" />

    </androidx.cardview.widget.CardView>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:shimmer_auto_start="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <include
            android:id="@+id/layoutLoading"
            layout="@layout/layout_loading"
            />
    </com.facebook.shimmer.ShimmerFrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>